# discord-demotivatory-bot

./: .gitignore  main.py  pyproject.toml
image_search/: searcher.py
modules/: search.py
